added function that shows the whole map on "M" key-press for testing purposes